<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/lk"
            style="@style/button_tra"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height"
            android:background="@drawable/black_btn_seletor"
            android:gravity="center_vertical|center"
            android:text="@string/lukuang" />

        <Button
            android:id="@+id/sg"
            style="@style/button_tra"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height"
            android:background="@drawable/black_btn_seletor"
            android:gravity="center_vertical|center"
            android:text="@string/shigu" />

        <Button
            style="@style/button_tra"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height"
            android:background="@drawable/black_btn_seletor"
            android:gravity="center_vertical|center"
            android:text="@string/tucao" />

        <Button
            style="@style/button_tra"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height"
            android:background="@drawable/black_btn_seletor"
            android:gravity="center_vertical|center"
            android:text="@string/qiuzhu" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/row_height"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_padding"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/lukuang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="visible" >

            <RadioGroup
                android:id="@+id/lk_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/bicycle"
                    style="@style/rg_btn_style"
                    android:drawableTop="@drawable/rb_bicycle_selector"
                    android:text="@string/yongdu" />

                <RadioButton
                    android:id="@+id/car"
                    style="@style/rg_btn_style"
                    android:drawableTop="@drawable/rb_car_select"
                    android:text="@string/huanman" />

                <RadioButton
                    android:id="@+id/plane"
                    style="@style/rg_btn_style"
                    android:drawableTop="@drawable/rb_plane_selector"
                    android:text="@string/changtong" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shigu"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_bg"
            android:visibility="gone" >

            <EditText
                android:id="@+id/info_et"
                android:layout_width="fill_parent"
                android:layout_height="100dip"
                android:background="#00ffffff"
                android:gravity="left"
                android:paddingLeft="12.0dip"
                android:textColor="#808080"
                android:textColorHint="#ff666666"
                android:textSize="16.0sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="60dip"
        android:layout_marginTop="15dip" >

        <TextView
            android:id="@+id/place"
            style="@style/text_black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/row_padding"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/send"
            style="@style/text_black_18"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/row_padding"
            android:background="@drawable/row_selector"
            android:gravity="center_vertical|center"
            android:text="@string/button_submit" />
    </RelativeLayout>

</LinearLayout>